<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">SOOTHSAYER</string>
    <string name="help_title">SOOTHSAYER ATAK plugin</string>
    <!-- description -->
    <string name="app_desc">Interface to the SOOTHSAYER radio planning API</string>
    <string name="example_layer_description">This is an example layer.</string>
    <string name="route_exporter_name">Route Exporter</string>
    <string name="option_prompt" translatable="false">Choose option</string>
    <string name="draggable_marker_plugin">SOOTHSAYER</string>
    <string name="open_settings_txt">Open Settings</string>
    <string name="template">System</string>
    <string name="add_marker">+</string>
    <string name="settings">Settings</string>
    <string name="template_option_prompt" translatable="false">System templates</string>
    <string name="save">Save</string>
    <string name="option_a">Option TBC</string>
    <string name="api_key">API key</string>
    <string name="server">Server address</string>
    <string name="location_details">Loc: %1$s, %2$s, %3$sm (%4$sW)</string>
    <string name="location_details_amsl">Loc: %1$s, %2$s, %3$sm AMSL (%4$sW)</string>
    <string name="success_msg">Loading overlay...</string>
    <string name="loading_msg">Calculating coverage...</string>
    <string name="loading_link_msg">Finding Links…</string>
    <string name="error_msg">Something went wrong</string>
    <string name="internet_error">Network not found. Connect to a network</string>
    <string name="unauthorized_error">API key is invalid. Do you have an account? https://cloudrf.com/plans</string>
    <string name="host_not_resolved">Unable to resolve host</string>
    <string name="invalid_url_error">Please add a valid server url.</string>
    <string name="forbidden_url_error">Your account cannot use this feature. See https://cloudrf.com/plans</string>
    <string name="not_found_url_error">URL not found</string>
    <string name="internal_server_error">Calc failed likely due to size. Check FAQ at https://cloudrf.com/atak</string>
    <string name="marker_error">Please login to the server first.</string>
    <string name="empty_api_key">Please enter your API key.</string>
    <string name="api_mode">Mode</string>
    <string name="single">Single (CPU)</string>
    <string name="multiple">Multisite (GPU)</string>
    <string name="help">Help</string>
    <string name="ok_txt">OK</string>
    <string name="help_msg">This plugin simulates radio coverage for any radio system or platform.
        \nIt requires a server with an account to function.
        \nYou can use the public API at https://api.cloudrf.com or a private server (SOOTHSAYER > 1.9) with an IP like https://192.168.0.123
        \n\nTo use: Choose a template from the list then click the marker button to add a radio to the map. From there, either drag it or click the play button to calculate coverage. You can test a single radio or many with multisite mode (GPU required).
        \n\nLinks:\nTo model SNR links, check the links box in the settings and add multiple radios. Drag the markers to move them around or click the play button. Colours and units are user defined within the links settings.
        \n\nCoverage:\nTo model a heatmap of RF coverage, check the coverage box in the settings and add a radio. Drag the marker to model coverage or click the play button. Colours are set in the template.
        \n\nBounds box:\nTo focus output on a user defined area, click the polygon button and draw a shape. Coverage calculations OR Best Site Analysis will focus effort on the polygon.
        \n\nCo-opt feature:\nTo model live data taken from the map in ATAK, click the deputy badge and then assign templates to the callsigns in the list. Only data with altitude will be shown. Click start to automatically model the data after an interval or when it moves.
        \n\nSatellite coverage:\nSet the direction of the satellite as seen from the terminal. You can use a number of apps to get these angles. Use either the polygon tool or the radius slider to set the study area then click the button.
        \n\nBest Site Analysis:\nTo find the most efficient sites in an area, draw a polygon and click the magnifying glass button. Radio settings will come from the active template and the heatmap will show you where to place a radio for maximum coverage.
        \n\nRadio templates are downloaded automatically from your account or can be added as .json files to the SD card atak/SOOTHSAYER/templates folder.\nDocs, videos and templates are available at https://cloudrf.com/atak
        \n\nKMZ files can be found in the plugin KMZ folder and shared with team mates via the data package tool
        \n\nFor more information visit https://cloudrf.com/documentation
        \n\nMAKE THIS BETTER: Report bugs and request features at support@cloudrf.com</string>
    <string name="soothsayer_layer">SOOTHSAYER Layer</string>
    <string name="layer">%1$s Layer</string>
    <string name="coverage_layer">RF coverage layer</string>
    <string name="best_site_layer">Best Site Analysis</string>
    <string name="satellite_layer">Satellite beam</string>

    <!--Prompt Dialog strings-->
    <string name="civ_delete_layer">Delete layer</string>
    <string name="delete">Delete</string>
    <string name="question_mark_symbol">\?</string>
    <string name="cancel">Cancel</string>

    <string name="visible_off">visible: off</string>
    <string name="visible_on">visible: on</string>
    <string name="visible_partial">visible: partial</string>
    <string name="outlines_on">outlines: on</string>
    <string name="outlines_off">outlines: off</string>

    <string-array name="tbc_option_arrays">
        <item>Enable</item>
        <item>Disable</item>
    </string-array>

    <string name="drawing_shape_id">ds-%1$s</string>
    <string name="link_line_id">link-%1$s</string>
    <!--below is the name of group for drawing link lines on map-->
    <string name="drawing_objects">Drawing Objects</string>

    <string name="kmzlayer">Coverage</string>
    <string name="link_lines">Links</string>

    <string name="radio_settings">Edit</string>
    <string name="tx_radio_height">Tx Height (m)</string>
    <string name="rx_radio_height">Rx Height (m)</string>
    <string name="radio_power">Tx Power (w)</string>
    <string name="radio_frequency">Frequency (MHz)</string>
    <string name="radio_bandwidth">Bandwidth (MHz)</string>
    <string name="radio_noise">Noise Floor (dBm)</string>
    <string name="antenna_azimuth">Ant Azimuth (deg)</string>
    <string name="radio_recalculate">Recalculate</string>
    <string name="alert_title">Are you sure?</string>
    <string name="yes">Yes</string>
    <!--Login strings-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_hint">.....</string>
    <string name="server_txt">Service</string>
    <string name="login">Login</string>
    <string name="login_title">SOOTHSAYER login</string>
    <string name="empty_user_name">Please enter username.</string>
    <string name="empty_password">Please enter password.</string>
    <string name="template_downloading">Synchronising templates..</string>
    <string name="login_loading">Attempting login..</string>
    <string name="saved_profiles">Saved profiles</string>

    <string name="settings_layers_button">Layers</string>
    <string name="settings_coopt_button">Co-Opt</string>
    <string name="coopt_title">Co-Opt live data</string>
    <string name="settings_options_button">Options</string>
    <string name="settings_links_button">Links</string>
    <string name="settings_layers_title">Settings - Layers</string>
    <string name="settings_coopt_title">Settings - Co-Opt</string>
    <string name="settings_options_title">Settings - Links</string>
    <string name="settings_options_colours_unit">dB</string>
    <string name="colour_picker_title">Pick Colour</string>

    <string name="template_title">Template</string>
    <string name="templates_title">SOOTHSAYER - Templates</string>
    <string name="template_button">Templates</string>
    <string name="new_template_title">New Template</string>
    <string name="new_template_pick_file_btn">Pick File</string>
    <string name="cancel_new_template">Cancel</string>
    <string name="confirm_new_template">Import</string>
    <string name="new_template_pick_icon_title">Template - Pick Icon</string>
    <string name="new_template_pick_icon_btn">Pick Icon</string>
    <string name="new_template_icon_pick_file_btn">Pick File</string>
    <string name="no_template">Template list is empty. Click the add button to import.</string>
    <string name="template_limit">"You can only add up to %1$s templates"</string>
    <string name="choose_file">"Please choose file and icon both to import."</string>
    <string name="all_txt">ALL</string>
    <string name="file_path_message">"Your file has been saved in: \n \n%1$s\n \nYou can open this folder in a file manager to share the file."</string>

    <string name="resolution">Resolution</string>
    <string name="range">Range</string>
    <string name="_45">45</string>
    <string name="el">Elevation</string>
    <string name="_180">180</string>
    <string name="az">Azimuth</string>
    <string name="az_short">Az</string>
    <string name="el_short">El</string>
    <string name="degree">°</string>
    <string name="type">Type</string>
    <string name="satellite">Satellite coverage</string>
    <string name="satellite_range_value">10 km</string>
    <string name="satellite_range_value_fmt">%1$d km</string>
    <string name="satellite_go">Go</string>
    <string name="satellite_bounds_error">Must be between %1$s and %2$s</string>
    <string name="satellite_calculating">Calculating satellite coverage at %1$dm res…</string>
    <string name="satellite_failed">Satellite coverage download failed</string>
    <string name="satellite_bad_response">Server sent an unexpected response</string>
    <string name="coverage_no_image">No coverage image in the server response</string>
    <string name="coverage_layer_error">Could not draw the coverage layer: %1$s</string>
    <string name="coverage_layer_hidden">Layer added but hidden. Turn Coverage on in Settings &gt; Layers</string>
    <string name="use_drawn_polygon">User defined polygon</string>
</resources>
